[package]
name = "openssl-kdf"
version = "0.4.1"
description = "OpenSSL KDF function abstraction"
license = "MIT"
homepage = "https://github.com/puiterwijk/rust-openssl-kdf/"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[dependencies]
openssl = "0.10"
openssl-sys = "0.9"
libc = "0.2"
foreign-types = "0.3.1"
thiserror = "1"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
hex = "0.4"

[features]
allow_custom = []
deny_custom = []
force_custom = []
warn_custom = []

[package.metadata.docs.rs]
features = ["allow_custom"]
